--- a/index.css
+++ b/index.css
@@ -106,5 +106,21 @@ header {
 }
 
 
+.poster{
+    margin-top: -30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 4fr));
+    grid-template-rows: 220px 260px;
+    padding: 40px 20px;
+    gap: 10px;
+}
 
+.item1 {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.item2 {
+    grid-column: span 2;
+}
 
