--- a/index.css
+++ b/index.css
@@ -146,3 +146,36 @@ header {
     text-align: center;
     margin-top: 20px;
 }
+
+.novelty hr {
+    width: 150px;
+    height: 6px;
+    background-color: #7159f3;
+    border-radius: 3px;
+    margin-top: -20px ;
+}
+
+.noveltyFirst {
+    margin-top: 10px;
+}
+
+
+.novelty {
+    width: 100%;
+    height: 60px;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+    gap: 40px;
+}
+
+.novelty h1 {
+    font-size: 22px;
+    text-align: center;
+}
+
+.noveltySecond {
+    color: #807f7f;
+}
