--- a/index.css
+++ b/index.css
@@ -179,3 +179,59 @@ header {
 .noveltySecond {
     color: #807f7f;
 }
+
+
+.products {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 260px);
+    grid-template-rows: repeat(auto-fit, 490px);
+    justify-content: space-evenly;
+    row-gap: 30px;
+}
+
+.product img {
+    width: 100%;
+    height: 260px;
+    border-radius: 12px;
+}
+
+.product {
+    text-align: center;
+    height: 460px;
+    position: relative;
+}
+
+.product p {
+    font-size: 16px;
+    margin: 2px 0 10px;
+}
+
+.product span {
+    color: #807f7f;
+    font-size: 12px;
+}
+
+.product h1 {
+    font-size: 20px;
+    margin: 20px;
+}
+
+.add {
+    width: 259px;
+    height: 42px;
+    background-color: #7159f3;
+    color: #fff;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    border-radius: 10px;
+}
+
+.add p {
+    padding: 10px 10px 0;
+}
