do some changes

--- a/index.css
+++ b/index.css
@@ -258,7 +258,15 @@ header {
     width: 100%;
 }
 
-.giftBlock img{
-    width: 83%;
+.giftBlock img {
+    width: 100%;
 }
 
+.discount {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    height: 170px;
+    align-items: center;    
+    font-weight: 600;
+}
